peg/nn.gram
# PEG Grammar for nn

@class NNParser
@header'''
from pegen.parser import memoize, memoize_left_rec, logger
from nn_parser.parser_base import ParserBase as Parser
from typing import Any, Optional
'''
@subheader'''
from nn_ast import *
from nn_ast.stmts import *
from nn_ast.exprs import *
from nn_ast.types import *
from nn_ast.types.type_expr import *
from nn_ast.types.size_type_expr import *
'''

# STARTING
# ========

start[Source]: source

source[Source]: stmts=[statements] ENDMARKER { Source(stmts, self.source_file, LOCATIONS) }

# STATEMENTS
# ==========

statements: stmts=statement+ { stmts }

statement[Statement]:
    | stmt=simple_stmt [';'] [NEWLINE+] { Statement(stmt, self.source_file, LOCATIONS) }
    | stmt=compound_stmt [NEWLINE+] { Statement(stmt, self.source_file, LOCATIONS) }

simple_stmt:
    | func_decl_stmt { func_decl_stmt }
    | &'let' decl_stmt { decl_stmt }
    | &'import' import_stmt { import_stmt }

compound_stmt:
    | expr_stmt { expr_stmt }
    | &'export' export_stmt { export_stmt }
    | &'{' block_stmt { block_stmt }

# SIMPLE STATEMENTS
# =================

func_decl_stmt[FuncStatement]: NAME func_expr { FuncStatement(name, func_expr, self.source_file, LOCATIONS) }
decl_stmt[DeclStatement]: 'let' name=NAME ':' type_expr '=' expr ';' { DeclStatement(name, type_expr, expr, self.source_file, LOCATIONS) }
import_stmt[ImportStatement]: 'import' import_list 'from' import_dest { ImportStatement(import_list, import_dest, self.source_file, LOCATIONS) }

# COMPOUND STATEMENTS
# ===================

expr_stmt[ExprStatement]: expr { ExprStatement(expr, self.source_file, LOCATIONS) }
export_stmt[ExportStatement]: 'export' expr { ExportStatement(expr, self.source_file, LOCATIONS) }
block_stmt: '{' stmts=[statements] '}' { BlockStatement(stmts, self.source_file, LOCATIONS) }

import_list: import_item (',' import_item)* [',']
import_item: NAME ['as' NAME]
import_dest: STRING


# EXPRESSIONS
# ===========

expr:
    | call_expr
    | func_expr
    | ident_expr

func_expr[FuncExpression]: sizetype_expr_list=[sizetype_expr_list] type_expr_list=[type_expr_list] '(' arg_decl_a=arg_decl arg_decl_b=(',' arg_decl)* [','] ')' return_type=[':' type_expr] [NEWLINE+] block_stmt {
    FuncExpression(
        sizetype_expr_list,
        type_expr_list,
        [arg_decl_a] + list(map(lambda x: x[1], arg_decl_b)),
        None if return_type is None else return_type[1],
        block_stmt,
        self.source_file,
        LOCATIONS
    )
}
call_expr[CallExpression]: left=expr '(' right_a=expr right_b=(',' expr)* [','] ')' {
    CallExpression(
        left,
        [right_a] + list(map(lambda x: x[1], right_b)),
        self.source_file,
        LOCATIONS
    )
}
ident_expr[IdentExpression]: name=NAME {
    IdentExpression(name, self.source_file, LOCATIONS)
}

arg_decl[ArgumentDecl]: name=NAME ':' type_expr {
    ArgumentDecl(name, type_expr, self.source_file, LOCATIONS)
}

# TYPE
# ====

type_expr[TypeExpr]:
    | data_type_expr { TypeExpr(data_type_expr, self.source_file, LOCATIONS) }
    | func_type_expr { TypeExpr(func_type_expr, self.source_file, LOCATIONS) }

data_type_expr[PrimitiveTypeExpr]: name=NAME sizetype_expr_list=[sizetype_expr_list] type_expr_list=[type_expr_list] {
    PrimitiveTypeExpr(name, sizetype_expr_list, type_expr_list, self.source_file, LOCATIONS)
}
func_type_expr[FuncTypeExpr]: sizetype_expr_list=[sizetype_expr_list] type_expr_list=[type_expr_list] '(' arg_type_a=type_expr arg_type_b=(',' type_expr)* [','] ')' ':' return_type=type_expr  {
    FuncTypeExpr(sizetype_expr_list, type_expr_list, [arg_type_a] + arg_type_b, return_type, self.source_file, LOCATIONS)
}

type_expr_list: '<' type_expr_a=type_expr type_expr_b=(',' type_expr)* [','] '>' {
    [type_expr_a] + type_expr_b
}

# SIZE TYPE
# =========

sizetype_expr:
    | '...' name=NAME {
        SizeTypeExpr(
            SpreadSizeType(name, self.source_file, LOCATIONS),
            self.source_file,
            LOCATIONS
        )
    }
    | number=NUMBER {
        SizeTypeExpr(
            NumberSizeType(number, self.source_file, LOCATIONS),
            self.source_file,
            LOCATIONS
        )
    }
    | ident=NAME {
        SizeTypeExpr(
            IdentSizeType(ident, self.source_file, LOCATIONS),
            self.source_file,
            LOCATIONS
        )
    }

sizetype_expr_list: '[' sizetype_expr_a=sizetype_expr sizetype_expr_b=(',' sizetype_expr)* [','] ']' {
    SizeType(
        [sizetype_expr_a] + list(map(lambda x: x[1], sizetype_expr_b)),
        self.source_file,
        LOCATIONS
    )
}
